--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Easy veterinary appointment scheduling for your beloved pets"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>PawTime - Veterinary Appointment System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
